# pdf-link-checker

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS  Dockerfile  README.md  pyproject.toml  report.csv
.github/workflows/: python-publish.yml
pdf_link_checker/: __init__.py  main.py  pdf_link_check.py  record.py  utils.py
tests/: pdf_link_check_test.py  pdf_test.py
