[tool.poetry]
name = "pdf-link-checker"
version = "1.1.1"
description = ""
authors = ["Matt Briggs <mabrigg@microsoft.com>"]
maintainers = ["Patrick Stöckle <patrick.stoeckle@tum.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
requests = "2.20.0"
PyPDF2 = "^1.26.0"
typer = "^0.4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-link-checker = 'pdf_link_checker.main:app'
